v1.4.0 协作功能，邀请功能落地
